--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
-version: '3'
+version: "3"
 services:
   db:
     image: mysql:5.7.29
     container_name: e-shop-db
     ports:
-      - '13306:3306'
+      - "13306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: default
       MYSQL_USER: default
       MYSQL_PASSWORD: secret
-      TZ: 'Asia/Tokyo'
+      TZ: "Asia/Tokyo"
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
   backend:
     build: ./backend/
@@ -27,6 +27,6 @@ services:
     container_name: e-shop-frontend
     volumes:
       - ./frontend:/usr/src/app
-    command: sh -c "cd e-shop && yarn start"
+    command: sh -c "cd e-shop && yarn install && yarn start"
     ports:
       - "13030:3000"
